--- a/index.html
+++ b/index.html
@@ -22,34 +22,74 @@
 	<link rel="stylesheet" href="css/media.css" type="text/css" />
 </head>
 <body>
-	<!-- Desktop Navigationbar Menu Section Starts -->
-	<div class="container-fluid bg-navbar-menu-desktop" id="home">
-		<div class="row">
-			<div class="container">
-				<div class="row d-flex align-items-center">
-					<div class="col-sm-3 col-md-3 col-gl-3">
-						<div class="header-logo">
-							<a href="index.html">
-								<img src="images/logo.jpg" class="img-responsive" alt="" />
-							</a>
-						</div>
-					</div>
-					<div class="col-sm-9 col-md-9 col-lg-9">
-						<ul class="menu-listing-desktop d-flex justify-content-flex-end">
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="about.html">About Us</a></li>
-							<li><a href="products.html">Products</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
-						</ul>
-					</div>
+	<!-- Mobile Logo and Burger Menu Section Starts -->
+  <div class="container-fluid bg-logo-burger-menu-mobile">
+    <div class="row d-flex align-items-center">
+      <div class="col-xs-9">
+        <div class="header-logo-mobile">
+					<a href="index.html">
+						<img src="images/logo.jpg" class="img-responsive" alt="" />
+					</a>
 				</div>
-			</div>
-		</div>
+      </div>
+      <div class="col-xs-3">
+        <div class="hamburger-menu pull-right">
+          <div class="burger-menu">
+            <span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Mobile Logo and Burger Menu Section Ends -->
+	<!-- Mobile Navbar Menu Section Starts -->
+  <div class="fixed-navbar-menu-mobile">
+		<ul class="menu-listing-mobile">
+			<li class="active"><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="products.html">Products</a></li>
+			<li><a href="gallery.html">Gallery</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+		</ul>
 	</div>
-	<!-- Desktop Navigationbar Menu Section Ends -->
+  <!-- Mobile Navbar Menu Section Ends -->
+	<!-- Desktop Logo and Navbar Menu Section Starts -->
+  <div class="container-fluid bg-logo-navbar-menu-desktop">
+    <div class="row d-flex align-items-center">
+      <div class="col-sm-3 col-md-3 col-lg-3">
+				<div class="header-logo-desktop">
+					<a href="index.html">
+						<img src="images/logo.jpg" class="img-responsive" alt="" />
+					</a>
+				</div>
+      </div>
+      <div class="col-sm-9 col-md-6 col-lg-6">
+        <ul class="menu-listing-desktop">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-0 col-md-3 col-lg-3">
+        <div class="talk-to-expert pull-right">
+          <svg xmlns="http://www.w3.org/2000/svg" id="Group_1022" data-name="Group 1022" width="40" height="40" viewBox="0 0 40 40"><path id="Path_306" data-name="Path 306" d="M276.757,263.984a12.814,12.814,0,0,0-7.026-11.41,17.426,17.426,0,0,1-17.157,17.157,12.779,12.779,0,0,0,17.909,5.25l6.218,1.72-1.72-6.218A12.724,12.724,0,0,0,276.757,263.984Z" transform="translate(-236.756 -236.756)" fill="#da251c" opacity="0.6"></path><path id="Path_307" data-name="Path 307" d="M270.879,255.789a15.089,15.089,0,1,0-28.086,7.67l-2.037,7.364,7.364-2.037a15.092,15.092,0,0,0,22.758-13Zm-17.405-3.512h-2.314a4.631,4.631,0,1,1,7.755,3.417l-1.967,1.8V259.3h-2.316v-2.826l2.72-2.489a2.316,2.316,0,0,0-1.563-4.026A2.319,2.319,0,0,0,253.474,252.278Zm1.158,9.339h2.316v2.316h-2.316Z" transform="translate(-240.701 -240.701)" fill="#da251c"></path></svg>
+          <div class="talk-to-expert-details">
+            <h5>Talk to an Expert</h5>
+            <h4><a href="tel:+918048795440">+91-8048795440</a></h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Desktop Logo and Navbar Menu Section Ends -->
 	<!-- Slider Section Starts -->
 	<div class="container-fluid bg-slider-home">
+		<div class="slider-info-home">
+			<h1>Smart <span>Security</span> <span>System</span></h1>
+			<p>We Provide Best Locksmith Services All Over World</p>
+		</div>
 		<div class="banner-slick-slider-home">
 			<div>
 				<img src="images/slider-1.jpg" class="img-responsive" alt="" />
@@ -63,6 +103,32 @@
 		</div>
 	</div>
 	<!-- Slider Section Ends -->
+	<!-- Quick Inquiry Section Starts -->
+	<div class="container-fluid bg-quick-inquiry">
+		<div class="row d-flex align-items-center">
+			<div class="col-sm-2">
+				<section class="section-heading quick-inquiry-section-heading-home">
+					<h2>Get <span>Inquiry</span></h2>
+				</section>
+			</div>
+			<div class="col-sm-2">
+				<input type="text" class="form-control form-control-qi" placeholder="Name" />
+			</div>
+			<div class="col-sm-2">
+				<input type="email" class="form-control form-control-qi" placeholder="Email Address" />
+			</div>
+			<div class="col-sm-2">
+				<input type="text" class="form-control form-control-qi" placeholder="Number" />
+			</div>
+			<div class="col-sm-2">
+				<input type="text" class="form-control form-control-qi" placeholder="Message..." />
+			</div>
+			<div class="col-sm-2">
+				<input type="submit" class="btn btn-submit-inquiry" />
+			</div>
+		</div>
+	</div>
+	<!-- Quick Inquiry Section Ends -->
 	<!-- About Us Section Starts -->
 	<div class="container-fluid bg-about-home">
 		<div class="row">
@@ -75,7 +141,7 @@
 					</div>
 					<div class="col-sm-8 col-md-8 col-lg-8">
 						<div class="section-heading about-info-home">
-							<h2>About Us</h2>
+							<h2>About <span>Smart Security System</span></h2>
 							<p>Incorporated in the year 2007 at Vadodara (Gujarat, India) we “Smart Security System” are a Sole Proprietorship firm, engaged in Wholesaler, Distributor and Trader of Automation System, Sectional Door, High Speed Door, Docking System, Gate And Door Accessories etc. With the support of our vendors, we are able to provide these products in diverse specifications within stipulated time period. These products are widely demanded by our clients for their varied associated attributes. Under the guidance of our mentor “Mr. Shailesh Rana", we have been able to meet varied requirements of patrons in a prompt manner.</p>
 							<div class="read-more">
 								<a href="about.html">Read More <span></span><span></span><span></span><span></span></a>
@@ -87,6 +153,107 @@
 		</div>
 	</div>
 	<!-- About Us Section Ends -->
+	<!-- Products Section Starts -->
+	<div class="container-fluid bg-products-home">
+		<div class="row">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12">
+						<section class="section-heading product-section-heading-home text-center">
+							<h2>Our <span>Products</span></h2>
+						</section>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="slick-slider-products-home">
+							<div>
+								<div class="box-product-img-info-home">
+									<img src="images/product-1.jpg" class="img-responsive" alt="" />
+									<div class="box-product-info-home text-center">
+										<h3>CCTV Camera</h3>
+										<p>We are listed at the apex in the list of the well-reputed Security Products Exporters...</p>
+										<a href="">Read More</a>
+									</div>
+								</div>
+							</div>
+							<div>
+								<div class="box-product-img-info-home">
+									<img src="images/product-2.jpg" class="img-responsive" alt="" />
+									<div class="box-product-info-home text-center">
+										<h3>Automatic Door System</h3>
+										<p>We are counted amidst the well-reputed Automatic Door Control Systems Exporters...</p>
+										<a href="">Read More</a>
+									</div>
+								</div>
+							</div>
+							<div>
+								<div class="box-product-img-info-home">
+									<img src="images/product-3.jpg" class="img-responsive" alt="" />
+									<div class="box-product-info-home text-center">
+										<h3>Security Services</h3>
+										<p>We are reckoned as one of the most reliable provider Security Automation Services...</p>
+										<a href="">Read More</a>
+									</div>
+								</div>
+							</div>
+							<div>
+								<div class="box-product-img-info-home">
+									<img src="images/product-1.jpg" class="img-responsive" alt="" />
+									<div class="box-product-info-home text-center">
+										<h3>CCTV Camera</h3>
+										<p>We are listed at the apex in the list of the well-reputed Security Products Exporters...</p>
+										<a href="">Read More</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="read-more text-center">
+							<a href="products.html">View More <span></span><span></span><span></span><span></span></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Products Section Ends -->
+	<!-- Products Videos Section Starts -->
+	<div class="container-fluid bg-products-videos-home">
+		<div class="row">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12">
+						<section class="section-heading product-section-heading-home text-center">
+							<h2>Our <span>Products Videos</span></h2>
+						</section>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-4 col-md-4 col-lg-4">
+						<iframe class="yt-video-home" src="https://www.youtube.com/embed/IJUC1FNzuyI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="col-sm-4 col-md-4 col-lg-4">
+						<iframe class="yt-video-home" src="https://www.youtube.com/embed/My9pNn_06KA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="col-sm-4 col-md-4 col-lg-4">
+						<iframe class="yt-video-home" src="https://www.youtube.com/embed/CD1yu8Tro34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="read-more text-center">
+							<a href="products.html">View More <span></span><span></span><span></span><span></span></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Products Videos Section Ends -->
 	<!-- Footer Section Starts -->
 	<div class="container-fluid bg-footer-home">
 		<div class="row">
@@ -96,6 +263,11 @@
 						<div class="footer-heading">
 							<h3>About Us</h3>
 							<p>Incorporated in the year 2007 at Vadodara (Gujarat, India) we “Smart Security System”.</p>
+							<ul class="footer-social-listing">
+								<li><a href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+								<li><a href="" target="_blank"><i class="fab fa-instagram"></i></a></li>
+								<li><a href="" target="_blank"><i class="fab fa-youtube"></i></a></li>
+							</ul>
 						</div>
 					</div>
 					<div class="col-sm-2 col-md-2 col-lg-2">
@@ -138,16 +310,6 @@
 								</li>
 							</ul>
 						</div>
-					</div>
-				</div>
-				<div class="footer-horizontal-line"></div>
-				<div class="row">
-					<div class="col-xs-12">
-						<ul class="footer-social-listing text-center">
-              <li><a href="" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-              <li><a href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="" target="_blank"><i class="fab fa-youtube"></i></a></li>
-            </ul>
 					</div>
 				</div>
 				<div class="footer-horizontal-line"></div>
