--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="css/all.min.css" type="text/css" />
 	<!-- Bootstrap - 3 Minified CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+	<!-- AOS Minified CSS -->
+	<link rel="stylesheet" href="css/aos.min.css" type="text/css" />
 	<!-- Slick Slider Minified CSS -->
 	<link rel="stylesheet" href="css/slick.min.css" type="text/css" />
 	<link rel="stylesheet" href="css/slick-theme.min.css" type="text/css" />
@@ -56,14 +58,14 @@
 	<!-- Desktop Logo and Navbar Menu Section Starts -->
   <div class="container-fluid bg-logo-navbar-menu-desktop">
     <div class="row d-flex align-items-center">
-      <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 				<div class="header-logo-desktop">
 					<a href="index.html">
 						<img src="images/logo.jpg" class="img-responsive" alt="" />
 					</a>
 				</div>
       </div>
-      <div class="col-sm-9 col-md-6 col-lg-6">
+      <div class="col-xs-9 col-sm-9 col-md-6 col-lg-6">
         <ul class="menu-listing-desktop">
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
@@ -105,7 +107,7 @@
 	<!-- Slider Section Ends -->
 	<!-- Quick Inquiry Section Starts -->
 	<div class="container-fluid bg-quick-inquiry">
-		<div class="row d-flex align-items-center">
+		<div class="row d-flex align-items-center d-block-mobile">
 			<div class="col-sm-2">
 				<section class="section-heading quick-inquiry-section-heading-home">
 					<h2>Get <span>Inquiry</span></h2>
@@ -134,16 +136,16 @@
 		<div class="row">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-4 col-md-4 col-lg-4">
+					<div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade-up" data-aos-duration="1000">
 						<div class="about-img-home">
 							<img src="images/about-1.jpg" class="img-responsive" alt="" />
 						</div>
 					</div>
 					<div class="col-sm-8 col-md-8 col-lg-8">
 						<div class="section-heading about-info-home">
-							<h2>About <span>Smart Security System</span></h2>
-							<p>Incorporated in the year 2007 at Vadodara (Gujarat, India) we “Smart Security System” are a Sole Proprietorship firm, engaged in Wholesaler, Distributor and Trader of Automation System, Sectional Door, High Speed Door, Docking System, Gate And Door Accessories etc. With the support of our vendors, we are able to provide these products in diverse specifications within stipulated time period. These products are widely demanded by our clients for their varied associated attributes. Under the guidance of our mentor “Mr. Shailesh Rana", we have been able to meet varied requirements of patrons in a prompt manner.</p>
-							<div class="read-more">
+							<h2 data-aos="fade-up" data-aos-duration="1500">About <span>Smart Security System</span></h2>
+							<p data-aos="fade-up" data-aos-duration="1500">Incorporated in the year 2007 at Vadodara (Gujarat, India) we “Smart Security System” are a Sole Proprietorship firm, engaged in Wholesaler, Distributor and Trader of Automation System, Sectional Door, High Speed Door, Docking System, Gate And Door Accessories etc. With the support of our vendors, we are able to provide these products in diverse specifications within stipulated time period. These products are widely demanded by our clients for their varied associated attributes. Under the guidance of our mentor “Mr. Shailesh Rana", we have been able to meet varied requirements of patrons in a prompt manner.</p>
+							<div class="read-more" data-aos="fade-up" data-aos-duration="1500">
 								<a href="about.html">Read More <span></span><span></span><span></span><span></span></a>
 							</div>
 						</div>
@@ -226,25 +228,25 @@
 		<div class="row">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12">
+					<div class="col-xs-12" data-aos="fade-up" data-aos-duration="1500">
 						<section class="section-heading product-section-heading-home text-center">
 							<h2>Our <span>Products Videos</span></h2>
 						</section>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-sm-4 col-md-4 col-lg-4">
+					<div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade-up" data-aos-duration="1500">
 						<iframe class="yt-video-home" src="https://www.youtube.com/embed/IJUC1FNzuyI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-					<div class="col-sm-4 col-md-4 col-lg-4">
+					<div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade-up" data-aos-duration="1500">
 						<iframe class="yt-video-home" src="https://www.youtube.com/embed/My9pNn_06KA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
-					<div class="col-sm-4 col-md-4 col-lg-4">
+					<div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade-up" data-aos-duration="1500">
 						<iframe class="yt-video-home" src="https://www.youtube.com/embed/CD1yu8Tro34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-12">
+					<div class="col-xs-12" data-aos="fade-up" data-aos-duration="1500">
 						<div class="read-more text-center">
 							<a href="products.html">View More <span></span><span></span><span></span><span></span></a>
 						</div>
@@ -256,6 +258,9 @@
 	<!-- Products Videos Section Ends -->
 	<!-- Footer Section Starts -->
 	<div class="container-fluid bg-footer-home">
+		<div class="footer-shape">
+			<img src="images/footer-shape.png" class="img-responsive" alt="">
+		</div>
 		<div class="row">
 			<div class="container">
 				<div class="row">
@@ -331,11 +336,13 @@
 	<!-- Footer Section Ends -->
 	<!-- jQuery Library -->
 	<script src="js/jquery.min.js"></script>
+	<!-- AOS Minified JS -->
+	<script src="js/aos.min.js"></script>
 	<!-- Slick Slider Minified JS -->
 	<script src="js/slick.min.js"></script>
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
-	<!-- Index JS -->
+	<!-- Index Page JS -->
 	<script src="js/index.js"></script>
 </body>
 </html>
