--- a/about.html
+++ b/about.html
@@ -58,14 +58,14 @@
 	<!-- Desktop Logo and Navbar Menu Section Starts -->
   <div class="container-fluid bg-logo-navbar-menu-desktop">
     <div class="row d-flex align-items-center">
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <div class="col-sm-3 col-md-3 col-lg-3">
 				<div class="header-logo-desktop">
 					<a href="index.html">
 						<img src="images/logo.jpg" class="img-responsive" alt="" />
 					</a>
 				</div>
       </div>
-      <div class="col-xs-9 col-sm-9 col-md-6 col-lg-6">
+      <div class="col-sm-9 col-md-9 col-lg-6">
         <ul class="menu-listing-desktop">
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="about.html">About Us</a></li>
@@ -74,7 +74,7 @@
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
-      <div class="col-sm-0 col-md-3 col-lg-3">
+      <div class="col-sm-0 col-md-0 col-lg-3">
         <div class="talk-to-expert pull-right">
           <svg xmlns="http://www.w3.org/2000/svg" id="Group_1022" data-name="Group 1022" width="40" height="40" viewBox="0 0 40 40"><path id="Path_306" data-name="Path 306" d="M276.757,263.984a12.814,12.814,0,0,0-7.026-11.41,17.426,17.426,0,0,1-17.157,17.157,12.779,12.779,0,0,0,17.909,5.25l6.218,1.72-1.72-6.218A12.724,12.724,0,0,0,276.757,263.984Z" transform="translate(-236.756 -236.756)" fill="#da251c" opacity="0.6"></path><path id="Path_307" data-name="Path 307" d="M270.879,255.789a15.089,15.089,0,1,0-28.086,7.67l-2.037,7.364,7.364-2.037a15.092,15.092,0,0,0,22.758-13Zm-17.405-3.512h-2.314a4.631,4.631,0,1,1,7.755,3.417l-1.967,1.8V259.3h-2.316v-2.826l2.72-2.489a2.316,2.316,0,0,0-1.563-4.026A2.319,2.319,0,0,0,253.474,252.278Zm1.158,9.339h2.316v2.316h-2.316Z" transform="translate(-240.701 -240.701)" fill="#da251c"></path></svg>
           <div class="talk-to-expert-details">
@@ -175,37 +175,37 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-sm-4 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
             <div class="box-why-choose-us-ap">
               <p>Rich <span>vendor base</span></p>
             </div>
           </div>
-          <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-sm-4 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
             <div class="box-why-choose-us-ap">
               <p>Transparent <span>dealing</span></p>
             </div>
           </div>
-          <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-sm-4 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
             <div class="box-why-choose-us-ap">
               <p>Prompt <span>delivery</span></p>
             </div>
           </div>
-          <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-sm-4 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
             <div class="box-why-choose-us-ap">
               <p>Optimum <span>quality products</span></p>
             </div>
           </div>
-          <div class="col-sm-3 col-md-3 col-lg-3 box-why-choose-us-offset-ap" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-sm-4 col-md-3 col-lg-3 box-why-choose-us-offset-ap" data-aos="fade-up" data-aos-duration="1000">
             <div class="box-why-choose-us-ap">
               <p>Ethical <span>business policy</span></p>
             </div>
           </div>
-          <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-sm-4 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
             <div class="box-why-choose-us-ap">
               <p>Wide <span>distribution network</span></p>
             </div>
           </div>
-          <div class="col-sm-3 col-md-3 col-lg-3" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-sm-4 col-sm-offset-4 col-md-3 col-md-offset-0 col-lg-3 col-lg-offset-0" data-aos="fade-up" data-aos-duration="1000">
             <div class="box-why-choose-us-ap">
               <p>Affordable <span>pricing structure</span></p>
             </div>
@@ -223,7 +223,7 @@
 		<div class="row">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-3 col-md-3 col-lg-3">
+					<div class="col-sm-6 col-md-3 col-lg-3">
 						<div class="footer-heading">
 							<h3>About Us</h3>
 							<p>Incorporated in the year 2007 at Vadodara (Gujarat, India) we “Smart Security System”.</p>
@@ -234,10 +234,10 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-sm-2 col-md-2 col-lg-2">
+					<div class="col-sm-6 col-md-3 col-lg-2">
 						<div class="footer-heading">
 							<h3>Quick Links</h3>
-							<ul class="footer-listing">
+							<ul class="footer-listing footer-quick-links-listing">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About Us</a></li>
 								<li><a href="products.html">Products</a></li>
@@ -246,10 +246,10 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-sm-3 col-md-3 col-lg-3">
+					<div class="col-sm-6 col-md-3 col-lg-3">
 						<div class="footer-heading">
 							<h3>Our Products</h3>
-							<ul class="footer-listing">
+							<ul class="footer-listing footer-our-products-listing">
 								<li><a href="">Docking System</a></li>
 								<li><a href="">Sectional Door</a></li>
 								<li><a href="">Automation System</a></li>
@@ -257,7 +257,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="col-sm-4 col-md-4 col-lg-4">
+					<div class="col-sm-6 col-md-3 col-lg-4">
 						<div class="footer-heading">
 							<h3>Contact Us</h3>
 							<ul class="footer-listing footer-contact-listing">
@@ -285,7 +285,7 @@
 					</div>
 					<div class="col-sm-6 col-md-6 col-lg-6">
 						<div class="designed-info text-right">
-							<p>Designed By : <a href="" target="_blank">Trois Infotech</a></p>
+							<p>Designed By : <a href="https://troisinfotech.com/" target="_blank">Trois Infotech</a></p>
 						</div>
 					</div>
 				</div>
