--- a/sectional-area.html
+++ b/sectional-area.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
 	<meta name="author" content="" />
-	<title>Smart Security System | Contact Us</title>
+	<title>Smart Security System | Sectional Area</title>
 	<!-- Favicon Icon -->
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
@@ -49,9 +49,9 @@
 		<ul class="menu-listing-mobile">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About Us</a></li>
-			<li><a href="products.html">Products</a></li>
+			<li class="active"><a href="products.html">Products</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
-			<li class="active"><a href="contact.html">Contact Us</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
 		</ul>
 	</div>
   <!-- Mobile Navbar Menu Section Ends -->
@@ -69,9 +69,9 @@
         <ul class="menu-listing-desktop">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="products.html">Products</a></li>
+          <li class="active"><a href="products.html">Products</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li class="active"><a href="contact.html">Contact Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
       <div class="col-sm-0 col-md-0 col-lg-3">
@@ -96,8 +96,8 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="section-heading-ip">
-              <h1>Contact Us</h1>
-              <p><a href="index.html">Home</a><span>|</span><a href="contact.html" class="active">Contact Us</a></p>
+              <h1>Sectional Area</h1>
+              <p><a href="index.html">Home</a><span>|</span><a href="cctv-camera.html" class="active">CCTV Camera</a></p>
             </div>
           </div>
         </div>
@@ -105,93 +105,46 @@
     </div>
   </div>
   <!-- Inner Banner Section Ends -->
-  <!-- Contact Information Section Starts -->
-  <div class="container-fluid bg-contact-info-cp">
+  <!-- Product Details Section Starts -->
+  <div class="container-fluid bg-product-details-pp">
     <div class="row">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <div class="contact-info-heading">
-              <h2>Please <span>Get In Touch</span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6 col-md-4 col-lg-4">
-            <div class="address-mail-call-heading">
-              <div class="media media-address-mail-call">
-                <div class="media-left media-left-address-mail-call">
-                  <div class="address-mail-call-icon">
-                    <i class="fas fa-map-marker-alt"></i>
-                  </div>
-                </div>
-                <div class="media-body media-body-address-mail-call">
-                  <h4 class="media-heading">Address</h4>
-                  <p>322, Alankar Tower, Opposite M. S. University, Sayajiganj, Vadodara-390020, Gujarat, India</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4">
-            <div class="address-mail-call-heading">
-              <div class="media media-address-mail-call">
-                <div class="media-left media-left-address-mail-call">
-                  <div class="address-mail-call-icon">
-                    <i class="fas fa-envelope"></i>
-                  </div>
-                </div>
-                <div class="media-body media-body-address-mail-call">
-                  <h4 class="media-heading">Email Address</h4>
-                  <p><a href="mailto:info@smartsecuritysystem.com">info@smartsecuritysystem.com</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="visible-sm clearfix"></div>
-          <div class="col-sm-12 col-md-4 col-lg-4">
-            <div class="address-mail-call-heading">
-              <div class="media media-address-mail-call">
-                <div class="media-left media-left-address-mail-call">
-                  <div class="address-mail-call-icon">
-                    <i class="fas fa-phone-alt"></i>
-                  </div>
-                </div>
-                <div class="media-body media-body-address-mail-call">
-                  <h4 class="media-heading">Call For Help</h4>
-                  <p><a href="tel:+918048795440">+91-8048795440</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="section-heading product-detail-section-heading-pp text-center">
+							<h2>CCTV <span>Camera</span></h2>
+						</div>
+					</div>
+				</div>
         <div class="row">
           <div class="col-xs-12">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d59065.73645539977!2d73.12403519364959!3d22.292814269388767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d22.2807432!2d73.1418774!4m5!1s0x395fcf3274a4df23%3A0x3ebd0c2c1ea08d2f!2s322%2C%20Alankar%20Tower%2C%20Opposite%20M.%20S.%20University%2C%20Sayajiganj%2C%20Vadodara!3m2!1d22.3092793!2d73.1839435!5e0!3m2!1sen!2sin!4v1643192079402!5m2!1sen!2sin" class="display-map-cp" allowfullscreen="" loading="lazy"></iframe>
+            <div class="box-product-detail-img-info-pp">
+							<img src="images/product-1.jpg" alt="" />
+              <p>We are listed at the apex in the list of the well-reputed Security Products Exporters from India. The Safety & Security Products offered by us are sourced from the reliable vendors to ensure availability of no other alternative in terms quality and performance. The Door Security Products are also available with us in the array along with Industrial Security Products. Additionally, customers are eased with the availability of the Security Products as mentioned under.
+                CCTV, Closed Circuit Television, Video Surveillance Cameras, Security Cameras, Digital Cameras, Spy Cameras, Hidden Video Cameras, Covert Cameras, Cameras for Home Security, Wireless Cameras, DVR, Digital Video Recorder, Buy Cameras, Metal Detectors: Walk-thru Metal Detectors, Metal detectors for Schools and Hand Held Metal Detectors -Metal Detectors for Treasure Hunters, Security Portals, Security Doors, GPS System.</p>
+            </div>
           </div>
         </div>
-        <form>
-          <div class="row">
-            <div class="col-sm-4 col-md-4 col-lg-4">
-              <input type="text" class="form-control form-control-contact" placeholder="Enter Name" autocomplete="off" />
-            </div>
-            <div class="col-sm-4 col-md-4 col-lg-4">
-              <input type="email" class="form-control form-control-contact" placeholder="Enter Email Address" autocomplete="off" />
-            </div>
-            <div class="col-sm-4 col-md-4 col-lg-4">
-              <input type="text" class="form-control form-control-contact" placeholder="Enter Mobile Number" autocomplete="off" />
-            </div>
-            <div class="col-xs-12">
-              <textarea class="form-control form-control-contact" placeholder="Message..."></textarea>
-            </div>
-            <div class="col-sm-4 col-md-4 col-lg-4">
-              <input type="submit" class="btn-submit" value="Submit" />
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="section-heading text-center">
+							<h2>Automatic <span>Door System</span></h2>
+						</div>
+					</div>
+				</div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="box-product-detail-img-info-pp">
+							<img src="images/product-2.jpg" alt="" />
+              <p>We are listed at the apex in the list of the well-reputed Security Products Exporters from India. The Safety & Security Products offered by us are sourced from the reliable vendors to ensure availability of no other alternative in terms quality and performance. The Door Security Products are also available with us in the array along with Industrial Security Products. Additionally, customers are eased with the availability of the Security Products as mentioned under.
+                CCTV, Closed Circuit Television, Video Surveillance Cameras, Security Cameras, Digital Cameras, Spy Cameras, Hidden Video Cameras, Covert Cameras, Cameras for Home Security, Wireless Cameras, DVR, Digital Video Recorder, Buy Cameras, Metal Detectors: Walk-thru Metal Detectors, Metal detectors for Schools and Hand Held Metal Detectors -Metal Detectors for Treasure Hunters, Security Portals, Security Doors, GPS System.</p>
             </div>
           </div>
-        </form>
+        </div>
       </div>
     </div>
   </div>
-  <!-- Contact Information Section Ends -->
+  <!-- Product Details Section Ends -->
 	<!-- Footer Section Starts -->
 	<div class="container-fluid bg-footer-home">
     <div class="footer-shape">
